Se agrugo xml para diseño de pagina de inicio de sesion

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="wine">#B26F6F</color>
     <color name="light_grey">#A49999</color>
     <color name="guinda">#766A6A</color>
+    <color name="azul">#4B7495</color>
+    <color name="verde">#447F79</color>
+
 </resources>
